deploy/staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: formbuilder-product-page-staging
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    external-dns.alpha.kubernetes.io/set-identifier: formbuilder-product-page-formbuilder-product-page-staging-blue
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  tls:
    - hosts:
        - formbuilder-product-page-staging.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: formbuilder-product-page-staging.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: formbuilder-product-page-staging
          servicePort: 4567
